--- a/index.html
+++ b/index.html
@@ -1,231 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Developer Portfolio</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- AOS CSS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="style.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ilham Akbarr Jamil - Portofolio</title>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/examples/js/controls/OrbitControls.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="#">
-                <span class="text-primary">&lt;</span>Portfolio<span class="text-primary">/&gt;</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<body class="bg-gray-900 text-white">
+  <header class="flex items-center justify-between p-6 bg-gray-800 shadow-lg fixed top-0 w-full z-50">
+    <h1 class="text-2xl font-bold">Ilham Akbarr Jamil</h1>
+    <nav>
+      <a href="#about" class="mx-4 hover:underline">Tentang Saya</a>
+      <a href="#skills" class="mx-4 hover:underline">Kemampuan</a>
+      <a href="#timeline" class="mx-4 hover:underline">Timeline</a>
+      <a href="#projects" class="mx-4 hover:underline">Portofolio</a>
+      <a href="#contact" class="mx-4 hover:underline">Kontak</a>
     </nav>
+  </header>
 
+  <main>
     <!-- Hero Section -->
-    <section class="hero-section position-relative">
-        <div id="particles-js"></div>
-        <div class="hero-content">
-            <div class="container text-center">
-                <h1 class="display-1 fw-bold mb-4" data-aos="fade-up">
-                    Creative Developer
-                </h1>
-                <p class="lead mb-5" data-aos="fade-up" data-aos-delay="200">
-                    Turning innovative ideas into extraordinary digital experiences
-                </p>
-                <div class="d-flex justify-content-center gap-3" data-aos="fade-up" data-aos-delay="400">
-                    <a href="#projects" class="btn btn-primary btn-lg hover-3d">
-                        <i class="fas fa-code me-2"></i>View Work
-                    </a>
-                    <a href="#contact" class="btn btn-outline-light btn-lg hover-3d">
-                        <i class="fas fa-envelope me-2"></i>Contact Me
-                    </a>
-                </div>
-            </div>
-        </div>
+    <section class="h-screen flex items-center justify-center relative overflow-hidden" id="hero">
+      <canvas id="3d-canvas" class="absolute inset-0"></canvas>
+      <div class="relative z-10 text-center">
+        <h2 class="text-4xl md:text-6xl font-extrabold animate-bounce">I'm Ilham Akbar Jamil</h2>
+        <p class="mt-4 text-lg md:text-xl">Mahasiswa Semester 3 - Teknik Informatika</p>
+        <a href="#about" class="mt-8 inline-block bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg transition">
+          Lihat Selengkapnya
+        </a>
+      </div>
     </section>
 
     <!-- About Section -->
-    <section id="about" class="section-padding">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6" data-aos="fade-right">
-                    <div class="position-relative">
-                        <img src="assets/img/profile.jpg" class="img-fluid rounded-3 shadow-lg" alt="Profile">
-                        <div class="experience-badge">
-                            <span class="number">5+</span>
-                            <span class="text">Years Experience</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6" data-aos="fade-left">
-                    <h2 class="section-title">About Me</h2>
-                    <p class="lead mb-4">A passionate developer with a creative mindset, dedicated to crafting beautiful and functional web experiences.</p>
-                    <div class="row mb-4 g-3">
-                        <div class="col-6">
-                            <div class="achievement-card">
-                                <i class="fas fa-project-diagram"></i>
-                                <h4>50+</h4>
-                                <p>Projects Completed</p>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="achievement-card">
-                                <i class="fas fa-smile-beam"></i>
-                                <h4>30+</h4>
-                                <p>Happy Clients</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section class="py-16 px-6" id="about">
+      <h2 class="text-3xl font-bold mb-6 text-center">Tentang Saya</h2>
+      <p class="text-lg text-center max-w-4xl mx-auto">
+        Saya adalah mahasiswa semester 3 jurusan Teknik Informatika yang memiliki passion dalam pengembangan perangkat lunak. 
+        Saya telah mengerjakan berbagai proyek, termasuk aplikasi CRUD untuk perpustakaan menggunakan Java. 
+        Selain itu, saya juga memiliki pengalaman menggunakan berbagai teknologi dan bahasa pemrograman untuk membangun aplikasi yang efisien dan inovatif.
+      </p>
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="section-padding bg-light">
-        <div class="container">
-            <h2 class="section-title text-center mb-5">My Skills</h2>
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6" data-aos="zoom-in">
-                    <div class="skill-card">
-                        <i class="fas fa-code"></i>
-                        <h3>Frontend Development</h3>
-                        <div class="skill-tags">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
-                            <span>JavaScript</span>
-                            <span>React</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
-                    <div class="skill-card">
-                        <i class="fas fa-server"></i>
-                        <h3>Backend Development</h3>
-                        <div class="skill-tags">
-                            <span>Node.js</span>
-                            <span>Express</span>
-                            <span>MongoDB</span>
-                            <span>SQL</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
-                    <div class="skill-card">
-                        <i class="fas fa-paint-brush"></i>
-                        <h3>UI/UX Design</h3>
-                        <div class="skill-tags">
-                            <span>Figma</span>
-                            <span>Adobe XD</span>
-                            <span>Photoshop</span>
-                            <span>Illustrator</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <section class="py-16 px-6 bg-gray-800" id="skills">
+      <h2 class="text-3xl font-bold mb-6 text-center">Kemampuan Saya</h2>
+      <div class="grid gap-8 md:grid-cols-3 max-w-6xl mx-auto">
+        <div class="p-6 bg-gray-700 rounded-lg shadow-lg text-center">
+          <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo.png" alt="Java" class="mx-auto mb-4">
+          <h3 class="text-xl font-bold mb-2">Java</h3>
+          <p>Menggunakan Java untuk pengembangan aplikasi desktop dan manajemen data berbasis CRUD.</p>
         </div>
+        <div class="p-6 bg-gray-700 rounded-lg shadow-lg text-center">
+          <img src="https://img.icons8.com/color/48/000000/python.png" alt="Python" class="mx-auto mb-4">
+          <h3 class="text-xl font-bold mb-2">Python</h3>
+          <p>Pengalaman dalam scripting, pengolahan data, dan pengembangan aplikasi berbasis AI.</p>
+        </div>
+        <div class="p-6 bg-gray-700 rounded-lg shadow-lg text-center">
+          <img src="https://img.icons8.com/color/48/000000/javascript.png" alt="JavaScript" class="mx-auto mb-4">
+          <h3 class="text-xl font-bold mb-2">JavaScript</h3>
+          <p>Mengembangkan antarmuka web interaktif menggunakan vanilla JavaScript dan framework modern.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Timeline Section -->
+    <section class="py-16 px-6" id="timeline">
+      <h2 class="text-3xl font-bold mb-6 text-center">Perjalanan Saya</h2>
+      <div class="max-w-4xl mx-auto">
+        <ul class="relative border-l border-gray-700">
+          <li class="mb-10 ml-6">
+            <div class="absolute w-3 h-3 bg-blue-500 rounded-full -left-1.5 border border-gray-900"></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-500">2022</time>
+            <h3 class="text-lg font-semibold text-white">Masuk Teknik Informatika</h3>
+            <p class="text-base font-normal text-gray-400">Mulai menekuni dunia pemrograman dan pengembangan perangkat lunak.</p>
+          </li>
+          <li class="mb-10 ml-6">
+            <div class="absolute w-3 h-3 bg-blue-500 rounded-full -left-1.5 border border-gray-900"></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-500">2023</time>
+            <h3 class="text-lg font-semibold text-white">Mengerjakan Proyek CRUD</h3>
+            <p class="text-base font-normal text-gray-400">Mengembangkan aplikasi perpustakaan berbasis Java dengan implementasi CRUD.</p>
+          </li>
+          <li class="ml-6">
+            <div class="absolute w-3 h-3 bg-blue-500 rounded-full -left-1.5 border border-gray-900"></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-500">2024</time>
+            <h3 class="text-lg font-semibold text-white">Belajar Three.js</h3>
+            <p class="text-base font-normal text-gray-400">Memulai eksplorasi visualisasi 3D menggunakan Three.js.</p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="section-padding">
-        <div class="container">
-            <h2 class="section-title text-center mb-5">Featured Projects</h2>
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6" data-aos="flip-left">
-                    <div class="project-card hover-3d">
-                        <div class="project-image">
-                            <img src="assets/img/project1.jpg" alt="Project 1">
-                            <div class="project-overlay">
-                                <a href="#" class="btn btn-light">View Project</a>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h4>E-Commerce Platform</h4>
-                            <p>Modern online shopping experience</p>
-                            <div class="tech-stack">
-                                <span>React</span>
-                                <span>Node.js</span>
-                                <span>MongoDB</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Add more project cards as needed -->
-            </div>
+    <section class="py-16 px-6 bg-gray-800" id="projects">
+      <h2 class="text-3xl font-bold mb-6 text-center">Portofolio Proyek</h2>
+      <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
+        <div class="p-6 bg-gray-700 rounded-lg shadow-lg hover:shadow-2xl transition transform hover:-translate-y-2">
+          <img src="https://via.placeholder.com/150" alt="Project Thumbnail" class="rounded-md mb-4">
+          <h3 class="text-xl font-bold mb-2">Aplikasi Perpustakaan</h3>
+          <p>CRUD menggunakan Java untuk mengelola data buku, anggota, dan peminjaman.</p>
         </div>
+        <!-- Tambahkan proyek lainnya di sini -->
+      </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section-padding">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="contact-card" data-aos="zoom-in">
-                        <h2 class="section-title text-center mb-5">Let's Connect</h2>
-                        <form class="contact-form">
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <input type="text" class="form-control" placeholder="Your Name" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="email" class="form-control" placeholder="Your Email" required>
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="form-control" placeholder="Subject">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
-                                </div>
-                                <div class="col-12 text-center">
-                                    <button type="submit" class="btn btn-primary btn-lg hover-3d">
-                                        <i class="fas fa-paper-plane me-2"></i>Send Message
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section class="py-16 px-6" id="contact">
+      <h2 class="text-3xl font-bold mb-6 text-center">Kontak</h2>
+      <p class="text-center">Hubungi saya melalui email: <a href="mailto:ilham@example.com" class="text-blue-400">ilham@example.com</a></p>
+      <div class="flex justify-center mt-4">
+        <a href="https://linkedin.com" class="mx-4 text-blue-500 hover:text-blue-600">
+          <img src="https://img.icons8.com/fluent/48/000000/linkedin.png" alt="LinkedIn">
+        </a>
+        <a href="https://github.com" class="mx-4 text-white hover:text-gray-400">
+          <img src="https://img.icons8.com/fluent/48/000000/github.png" alt="GitHub">
+        </a>
+      </div>
     </section>
+  </main>
 
-    <!-- Footer -->
-    <footer class="footer py-4">
-        <div class="container text-center">
-            <div class="social-links mb-4">
-                <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-            </div>
-            <p class="mb-0">&copy; 2024 Your Name. All rights reserved.</p>
-        </div>
-    </footer>
+  <footer class="py-6 bg-gray-800 text-center">
+    <p>&copy; 2024 Ilham Akbarr Jamil. Semua Hak Dilindungi.</p>
+  </footer>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
